# STAY_DEV

./: README.md  autre.py  hello.py  main.ipynb  main.py  pyproject.toml  scrape.json  scrapetubeTest.py  test.py  utils.py  vocabulary.json  vocabularyGPT.json
collecting/: main.ipynb  shorts.py
collecting/jsons/: categories.json  channel_names.json  channels.json  channelsMetrics.json  echantillon.json  queries.json  scrape.json  shorts_with_links.json  videos.json
collecting/scripts/: commentsCollecting.ipynb  main.ipynb  main.py  metricsCollecting.ipynb  postCollecting.ipynb  utils.py
dash/: carte_france_bulles.html  carte_france_bulles_valeurs.html  main.ipynb
enrichissement/: couverture_par_chaine.json  main.ipynb  map_janze.html  script.py  spacialEntities_update copy.ipynb  spacialEntities_update.ipynb
enrichissement/jsons/: test.json  testResults.json  updatedVideos.json  updatedVideosNew.json
filtering/channels/: main.ipynb
filtering/channels/jsons/: channelsF1.json  channelsF2.json  channelsF3.json  channelsR1.json  echantillon.json  echantillonPredictions.json  echantillonPredictions2.json
filtering/channels/scripts/: Retour_Experte.ipynb  filter1.ipynb  filter2.ipynb  filter3.ipynb
filtering/channels/xlsx/: chaines_pertinentes.xlsx
filtering/jsons/: Voc.json  channelsF1.json  channelsR1.json  channels_location_Unknown.json  channels_location_Unknown_1.json  channels_location_Unknown_2.json  echantillonIP.json  filtredVidoesIP.json  keywordsVsMTD.json  llmEvaluation.json  llmVideosNon.json  videosNon.xlsx  videosfr.json
filtering/jsons1/: llmVideosNon.json  llmVideosOui.json
filtering/scripts/: autre.py  main.ipynb  main.py  main1.ipynb  main2.ipynb  main3.ipynb  searchAgent.py  test.py  utils.py
filtering/videos/: main.ipynb
filtering/videos/jsons/: ToValidate.json  Voc.json  approach_1_Results.json  approach_2_Results.json  channelsR1.json  channels_location_Unknown.json  echantillon.json  (+14 more)
jsons/: Voc.json  queries.json  shorts.json  shorts_without_links.json  videosMetrics.json
keywords/: main.ipynb
keywords/csv/: keywords.csv
keywords/jsons/: fewShot.json  keywords.json  keywordsv1.json  zeroShot.json
keywords/scripts/: main1.ipynb  main2.ipynb
sauvegarde/: creationDatabase.py  creationTables.py
sauvegarde/scripts/: TimeAnalysis.sql  commands.sql  main.ipynb  pour_PresentationS10.sql  updateDatabase.ipynb
sauvegarde/xlsx/: chaines_pertinentes_RE.xlsx  videos_pertinentes_RE.xlsx
saving/: main.ipynb
scripts/: autre.py  main.ipynb  main.py  test.py  utils.py
scripts/Collecting/: main.ipynb  main.py  shorts.py  test.py  utils.py
scripts/Filtering/: main.py  test.py  utilits.py
xls/: channel_video_counts.xlsx  other.xlsx  statistiques_videos.xlsx  tag_frequencies.xlsx  videos_categories.xlsx
(+18 files in other folders)
