[project]
name = "agrotube"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.13.3",
    "colorama>=0.4.6",
    "google-api-python-client>=2.165.0",
    "ipykernel>=6.29.5",
    "isodate>=0.7.2",
    "langchain-community>=0.3.21",
    "langchain-core>=0.3.52",
    "langchain-google-genai>=2.1.2",
    "langdetect>=1.0.9",
    "langgraph>=0.3.30",
    "matplotlib>=3.10.1",
    "openai>=1.69.0",
    "openpyxl>=3.1.5",
    "python-dotenv>=1.0.1",
    "scrapetube>=2.5.1",
    "seaborn>=0.13.2",
    "selenium>=4.31.0",
    "tqdm>=4.67.1",
    "wordcloud>=1.9.4",
]
