[project]
name = "stayproject"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "colorama>=0.4.6",
    "folium>=0.20.0",
    "geopy>=2.4.1",
    "gliner>=0.2.17",
    "google-api-python-client>=2.179.0",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.6",
    "langchain-community>=0.3.21",
    "langchain-core>=0.3.52",
    "langchain-google-genai>=2.1.2",
    "langchain-nvidia-ai-endpoints>=0.3.12",
    "langchain-ollama>=0.3.2",
    "langchain-openai>=0.3.13",
    "langchain[openai]>=0.3.23",
    "langdetect>=1.0.9",
    "matplotlib>=3.10.1",
    "openai>=1.69.0",
    "openpyxl>=3.1.5",
    "pip>=25.0.1",
    "psycopg[binary]>=3.2.9",
    "python-dotenv>=1.0.1",
    "scrapetube>=2.5.1",
    "sentence-transformers>=4.1.0",
    "tqdm>=4.67.1",
    "wordcloud>=1.9.4",
]
